# xtts-finetune

./: .gitignore  Dockerfile  README.md  convert_audio.py  finetune.py  main.py  podman.sh  pyproject.toml  requirements.txt  transcribe.py  validate_audio.py
